<resources>
    <string name="app_name">Calculator</string>

    <string name="percentage">\u0025</string>
    <string name="clear">\u0043</string>
    <string name="backspace">\u232B</string>
    <string name="add">\u002B</string>
    <string name="subtract">\u002D</string>
    <string name="multiply">\u00D7</string>
    <string name="divide">\u00F7</string>
    <string name="Equals">\u003D</string>

    <string name="btnZero">0</string>
    <string name="btnDot">.</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    
    <string name="input_numbr">%s%s</string>

    <string name="Error">Error</string>

    <string name="versionName">1.1</string>

</resources>